--- a/views/admin/productoffer.hbs
+++ b/views/admin/productoffer.hbs
@@ -3,9 +3,9 @@
         <h3 style="color: #27374D;">Product offers </h3>
         <br />
         {{#if products}}
-        <div class="table-wrapper-scroll-y my-custom-scrollbar mt-3">
+        <div >
 
-            <table class="table table-striped">
+            <table class="table table-striped" id="productOfferTable">
                 <thead>
                     <tr style="font-size: .8rem;">
                         <th scope="col">Product Name</th>
