--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -89,9 +89,9 @@
     </div>
 
     {{#if product}}
-    <div class="table-wrapper-scroll-y my-custom-scrollbar ">
+    <div>
 
-      <table class=" table table-striped mt-2 table-bordered table-sm ">
+      <table class=" table table-striped mt-2 table-bordered table-sm " id="productTable">
         <thead>
           <tr style="font-size: 12px;">
             <th scope="col" class="text-center">Product Name</th>
