--- a/views/admin/banner.hbs
+++ b/views/admin/banner.hbs
@@ -4,7 +4,7 @@
     <br />
     <button
       type="button"
-      class="btn btn-primary"
+      class="btn btn-primary mb-2"
       data-toggle="modal"
       data-target="#exampleModalCenterVocher"
     >
@@ -83,9 +83,9 @@
     </div>
     <br />
     {{#if banner}}
-      <div class="table-wrapper-scroll-y my-custom-scrollbar mt-3">
+      <div>
 
-        <table class="table table-striped">
+        <table class="table table-striped" id="bannerId">
           <thead>
             <tr style="font-size: .8rem;">
               <th scope="col">Title</th>
