--- a/views/admin/coupon.hbs
+++ b/views/admin/coupon.hbs
@@ -180,7 +180,7 @@
     {{#if vouchers}}
       <div class="table-wrapper-scroll-y my-custom-scrollbar mt-3">
 
-        <table class="table table-striped">
+        <table class="table table-striped" id="voucherTable">
           <thead>
             <tr style="font-size: .8rem;">
               <th scope="col">Title</th>
