--- a/views/admin/view-user.hbs
+++ b/views/admin/view-user.hbs
@@ -3,7 +3,7 @@
     <h3 style="color: lightslategray;">Users </h3>
     <div class="">
     {{#if user}}
-   <table class="table table-bordered  mt-3">
+   <table class="table table-bordered  mt-3" id="userDataTable">
   <thead>
     <tr>
       <th scope="col" class="text-center">Sl No</th>
