--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,32 +12,36 @@
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="path/to/elevateZoom.css">
-{{!-- <script src="path/to/jquery.min.js"></script> --}}
-<script src="path/to/jquery.elevateZoom.min.js"></script>
+
+    {{!--
+    <script src="path/to/jquery.min.js"></script> --}}
+
 
 
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    {{!-- <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" /> --}}
-   
+
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
+    <link rel="stylesheet" href="/stylesheets/admin.css">
+    {{!--
+    <link href="/stylesheets/productpage.css" rel="stylesheet"> --}}
+    <link rel="stylesheet" href="/stylesheets/user.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
+
     
-        <link rel="stylesheet" href="/stylesheets/admin.css">
-        {{!-- <link href="/stylesheets/productpage.css" rel="stylesheet"> --}}
-           <link rel="stylesheet" href="/stylesheets/user.css">
-               
-         
 
     <title>Home</title>
-<style>
+    <style>
         body,
         html {
             height: 96.3%;
         }
+
         .sidebar {
             width: 200px;
         }
+
         .content {
             padding-left: 15px;
         }
@@ -68,27 +71,25 @@
     {{else}}
     {{>user-header}}
     {{>user-menu}}
-     {{{body}}}
+    {{{body}}}
     {{/if}}
-  
+
     {{/unless}}
 
     {{#if login}}
     <script src="/javascripts/handlebar.js"></script>
-    
+
     {{{body}}}
     {{/if}}
 
 
-   
 
 
-<script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
-   
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
@@ -96,11 +97,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    
-          <script src="/javascripts/user.js"></script>
-           <script src="/javascripts/admin.js"></script>
-           <script src="/javascripts/razorpay.js"></script>
-       
+        <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
+
+    <script src="/javascripts/user.js"></script>
+    <script src="/javascripts/admin.js"></script>
+    <script src="/javascripts/razorpay.js"></script>
+
 </body>
 
 </html>
