--- a/views/users/user-cart.hbs
+++ b/views/users/user-cart.hbs
@@ -20,7 +20,7 @@
                   <div class="me-lg-5">
                     <div class="d-flex">
                       <img class="card-img-top img-fluid border rounded me-3"
-                        src="/productImages/{{product.images.[0]}}" alt="Card image cap"
+                        src="{{product.images.[0]}}" alt="Card image cap"
                         style="width: 96px; height: 96px;" />
                       <div class="">
                         <a class="nav-link" style="font-size: 1.1rem;">
