--- a/views/admin/edit-products.hbs
+++ b/views/admin/edit-products.hbs
@@ -124,7 +124,7 @@
               type="checkbox"
               id="flexSwitchCheckDefault"
               name="trendingProduct"
-              value="on"
+              value="{{trendingProduct}}"
             />
             <label class="form-check-label" for="flexSwitchCheckDefault" >Add to
               trending Products</label>
@@ -135,7 +135,7 @@
               type="checkbox"
               id="flexSwitchCheckChecked"
               name="featuredProduct"
-              value="on"
+              value="{{featuredProduct}}"
             />
             <label class="form-check-label" for="flexSwitchCheckChecked">Add to
               featured product</label>
