--- a/views/users/wishlist.hbs
+++ b/views/users/wishlist.hbs
@@ -53,7 +53,7 @@
                 <tbody>
                   {{#each products}}
                   <tr style="height: 100px;">
-                    <td> <img style="height:50px; width:50px" src="/productImages/{{images.[0]}}" /></td>
+                    <td> <img style="height:50px; width:50px" src="{{images.[0]}}" /></td>
                     <td> <a href="/products/{{_id}}" class="link-primary">{{productName}}</a>
                       <br>
                       <br>
