--- a/views/users/wallet.hbs
+++ b/views/users/wallet.hbs
@@ -48,6 +48,7 @@
     
     <h5>List of Referrals:</h5>
     <br>
+    {{#if details}}
     <table class="table">
       <thead>
         <tr>
@@ -65,6 +66,11 @@
         {{/each}}
       </tbody>
     </table>
+    {{else}}
+    <div>
+      <p>refer now</p>
+      {{/if}}
+    </div>
       </div>
     </div>
   </div>
