--- a/views/users/user-cart.hbs
+++ b/views/users/user-cart.hbs
@@ -145,7 +145,7 @@
             <div class="card shadow-0 border">
               <div class="card-body">
                 <div class="d-flex justify-content-between mb-2">
-                  <p class="mb-2">price:</p>
+                  <p class="mb-2">Price:</p>
                   <p class="mb-2" id="totalprice">₹{{amounts.totalAmountSellingPrice}}</p>
                 </div>
                 <div class="d-flex justify-content-between mb-2">
