--- a/views/users/user-viewproducts.hbs
+++ b/views/users/user-viewproducts.hbs
@@ -76,7 +76,7 @@
                 <div class="row pb-3">
                     {{#each featuredProduct}}
                     <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
-                        <div class="card product-item border-0 mb-4">
+                        <div class="card product-item border-0 mb-4 ml-2 mr-2">
                             <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0" onclick="window.location.href='/products/{{_id}}';">
                                 <img class="img-fluid w-100" src="{{images.[0]}}" alt="">
                             </div>
