--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -155,7 +155,7 @@
                 </button>
               </div>
               <div id="toggleButtons{{_id}}" class="collapse">
-                <button type="button" class="btn-xs btn-primary" data-toggle="modal"
+                <button type="button" class="btn-xs btn-primary mb-2" data-toggle="modal"
                   data-target="#exampleModalCenterOffer{{_id}}">Offer</button>
                 <div class="modal fade" id="exampleModalCenterOffer{{_id}}" tabindex="-1" role="dialog"
                   aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
