--- a/views/admin/edit-products.hbs
+++ b/views/admin/edit-products.hbs
@@ -148,7 +148,7 @@
           </div>
 
           <div class="form-group">
-            <label class="col-lg-3 control-label"> Selling Price:</label>
+            <label class="col-lg-3 control-label"> Offered Price:</label>
             <div class="col-lg-8">
               <input
                 class="form-control"
